[package]
name = "hdpc-dl"
version = "0.1.0"
authors = ["b42-sneak <59374651+b42-sneak@users.noreply.github.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/b42-sneak/hdpc-dl"
homepage = "https://github.com/b42-sneak/hdpc-dl#readme"
readme = "README.md"
documentation = "https://docs.rs/hdpc-dl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
scraper = "0.12.0"
clap = "2.33.2"
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.13"
